# cmake-surprise

./: CMakeLists.txt  README.md  example.cpp
utils/: CMakeLists.txt  utils1.cpp  utils1.hpp  utils2.cpp  utils2.hpp  utils3.cpp  utils3.hpp
